--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.main{
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 80px 300px;
+  grid-template-rows: 100%;
+  grid-template-areas: 'side-nav message-side-bar'
+                        /* 'side-nav message-side-bar'
+                        'side-nav message-side-bar' */
+  ;
+}
+.side-nav{
+  grid-area: side-nav;
+}
+.message-side-bar{
+  border-right: 1px rgb(212, 209, 209) solid;
+  grid-area: message-side-bar;
+}
+
+.messages{
+  margin: .5rem;
+  display:flex;
+  align-items: center;
+}
+.message-info-div{
+  padding: 1rem;
+}
