--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 
 
 .main{
-  height: 100vh;
+  height: 100%;
   display: grid;
   grid-template-columns: 80px 300px 1fr;
   grid-template-rows: 100%;
@@ -16,11 +16,19 @@
 .side-nav{
   grid-area: side-nav;
   background-image: url('background.jpg');
+  height: 100vh;
+  box-sizing: border-box;
+  position: fixed;
 
 }
 .message-side-bar{
   border-right: 1px rgb(212, 209, 209) solid;
   grid-area: message-side-bar;
+  height: 100vh;
+  position: fixed;
+  left: 80px;
+  width: 300px;
+
 }
 
 .messages{
@@ -34,6 +42,8 @@
 .chat{
   grid-area: chat;
   background-color: rgb(244 244 245);
+  margin-top: 4rem;
+  margin-bottom: 3.5rem;
 }
 .chat-header{
   border-bottom: 1px solid rgb(211, 208, 208);
@@ -41,13 +51,15 @@
 .user-info-chat-header{
   display: flex;
 }
-.chat-area{
-  overflow: auto;
-}
 .type-message{
   position: fixed;
   bottom: 0;
   width: calc(100% - 381px)
+}
+.chat-header{
+  position: fixed;
+  top: 0;
+  margin-bottom: 2rem;
 }
 .message-input-container{
   display: flex;
@@ -61,4 +73,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.message-container{
+  display: flex;
+  flex-direction: column;
+}
+.message-user{
+  margin:  0 .5rem;
+  color: rgb(123, 123, 123);
+}
+.message-text{
+  padding: .5rem;
+  background-color: rgb(210, 210, 210);
+  max-width: 20rem;
+  border-radius: 1rem;
+  margin: .5rem;
 }
