--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@
 }
 .side-nav{
   grid-area: side-nav;
-  background-image: url('background.jpg');
+  background-image: url('./images/background.jpg');
   height: 100vh;
   box-sizing: border-box;
   position: fixed;
@@ -66,7 +66,7 @@
 .login-card{
   width: 100%;
   height: 100vh;
-  background-image: url('background.jpg');
+  background-image: url('./images/background.jpg');
   background-repeat: no-repeat;
   background-size:cover;
   display: flex;
@@ -87,4 +87,13 @@
   max-width: 20rem;
   border-radius: 1rem;
   margin: .5rem;
+}
+.errorboundary{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 3rem;
+  padding: 1rem;
+  font-size: 2rem;
 }
